--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -286,4 +286,16 @@
     <string name="production_date">تاريخ الإنتاج</string>
     <string name="expiration_date">تاريخ انتهاء الصلاحية</string>
     <string name="expiration_reminder">تذكير بانتهاء الصلاحية</string>
+    <string name="daily_below_threshold">يوميًا عندما يقل عن الحد الأدنى</string>
+    <string name="remind_days_before_expiration">تذكير بالأيام قبل انتهاء الصلاحية</string>
+    <string name="out_of_stock_reminder_help">يقوم بالتذكير عندما ينفد الدواء من المخزون، إما بعد كل تذكير أو مرة واحدة أو مرة واحدة يوميًا.</string>
+    <string name="expiration_date_reminder_help">يذكر عند الوصول إلى تاريخ انتهاء صلاحية الدواء أو في وقت قابل للتكوين قبل ذلك التاريخ.</string>
+    <string name="once">مرة واحدة</string>
+    <string name="daily">يوميًا</string>
+    <string name="medicine_stock_settings">إعدادات مخزون الأدوية</string>
+    <string name="edit_medicine_stock_settings">تعديل إعدادات مخزون الأدوية</string>
+    <string name="clear_dates">مسح التواريخ</string>
+    <string name="acknowledged">تم الإقرار</string>
+    <string name="refill_amount">إعادة التعبئة (%s)</string>
+    <string name="expiration_date_notification">الدواء %1$s له تاريخ انتهاء صلاحية في %2$s.\nفكر في استبدال الدواء.</string>
 </resources>
