--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -271,4 +271,16 @@
     <string name="production_date">Date de production</string>
     <string name="expiration_date">Date d\'expiration</string>
     <string name="expiration_reminder">Rappel d\'expiration</string>
+    <string name="daily_below_threshold">Quotidiennement en dessous du seuil</string>
+    <string name="remind_days_before_expiration">Rappel jours avant l\'expiration</string>
+    <string name="out_of_stock_reminder_help">Rappelle lorsque le médicament est en rupture de stock, soit après chaque rappel, soit une fois, soit une fois par jour.</string>
+    <string name="expiration_date_reminder_help">Rappelle lorsque la date d\'expiration du médicament est atteinte ou un temps configurable avant cette date.</string>
+    <string name="once">Une fois</string>
+    <string name="daily">Quotidiennement</string>
+    <string name="medicine_stock_settings">Paramètres du stock de médicaments</string>
+    <string name="edit_medicine_stock_settings">Modifier les paramètres du stock de médicaments</string>
+    <string name="clear_dates">Effacer les dates</string>
+    <string name="acknowledged">Confirmé</string>
+    <string name="refill_amount">Recharge (%s)</string>
+    <string name="expiration_date_notification">Le médicament %1$s a une date d\'expiration au %2$s.\nPensez à remplacer le médicament.</string>
 </resources>
