--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -271,4 +271,16 @@
     <string name="production_date">Data di produzione</string>
     <string name="expiration_date">Data di scadenza</string>
     <string name="expiration_reminder">Promemoria di scadenza</string>
+    <string name="daily_below_threshold">Giornalmente sotto soglia</string>
+    <string name="remind_days_before_expiration">Promemoria giorni prima della scadenza</string>
+    <string name="out_of_stock_reminder_help">Ricorda quando il medicinale è esaurito, dopo ogni promemoria, una volta o una volta al giorno.</string>
+    <string name="expiration_date_reminder_help">Ricorda quando la data di scadenza del medicinale è raggiunta o un tempo configurabile prima di tale data.</string>
+    <string name="once">Una volta</string>
+    <string name="daily">Giornalmente</string>
+    <string name="medicine_stock_settings">Impostazioni scorte medicinali</string>
+    <string name="edit_medicine_stock_settings">Modifica impostazioni scorte medicinali</string>
+    <string name="clear_dates">Cancella date</string>
+    <string name="acknowledged">Confermato</string>
+    <string name="refill_amount">Ricarica (%s)</string>
+    <string name="expiration_date_notification">Il medicinale %1$s ha una data di scadenza del %2$s.\nPrendi in considerazione la sostituzione del medicinale.</string>
 </resources>
