--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -276,4 +276,16 @@
     <string name="production_date">Data produkcji</string>
     <string name="expiration_date">Data wygaśnięcia</string>
     <string name="expiration_reminder">Przypomnienie o wygaśnięciu</string>
+    <string name="daily_below_threshold">Codziennie poniżej progu</string>
+    <string name="remind_days_before_expiration">Przypomnij dni przed wygaśnięciem</string>
+    <string name="out_of_stock_reminder_help">Przypomina, gdy lek jest niedostępny, po każdym przypomnieniu, raz lub raz dziennie.</string>
+    <string name="expiration_date_reminder_help">Przypomina o upływie terminu ważności leku lub w konfigurowalnym czasie przed tą datą.</string>
+    <string name="once">Raz</string>
+    <string name="daily">Codziennie</string>
+    <string name="medicine_stock_settings">Ustawienia zapasów leków</string>
+    <string name="edit_medicine_stock_settings">Edytuj ustawienia zapasów leków</string>
+    <string name="clear_dates">Wyczyść daty</string>
+    <string name="acknowledged">Potwierdzono</string>
+    <string name="refill_amount">Uzupełnienie (%s)</string>
+    <string name="expiration_date_notification">Lek %1$s ma datę ważności %2$s.\nRozważ wymianę leku.</string>
 </resources>
