--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -271,4 +271,16 @@
     <string name="production_date">Data de produção</string>
     <string name="expiration_date">Data de vencimento</string>
     <string name="expiration_reminder">Lembrete de vencimento</string>
+    <string name="daily_below_threshold">Diariamente abaixo do limite</string>
+    <string name="remind_days_before_expiration">Lembrar dias antes do vencimento</string>
+    <string name="out_of_stock_reminder_help">Lembra quando o medicamento está em falta, seja após cada lembrete, uma vez ou uma vez ao dia.</string>
+    <string name="expiration_date_reminder_help">Lembra quando a data de validade do medicamento é atingida ou um tempo configurável antes dessa data.</string>
+    <string name="once">Uma vez</string>
+    <string name="daily">Diariamente</string>
+    <string name="medicine_stock_settings">Configurações de estoque de medicamentos</string>
+    <string name="edit_medicine_stock_settings">Editar configurações de estoque de medicamentos</string>
+    <string name="clear_dates">Limpar datas</string>
+    <string name="acknowledged">Confirmado</string>
+    <string name="refill_amount">Recarga (%s)</string>
+    <string name="expiration_date_notification">O medicamento %1$s tem data de validade de %2$s.\nConsidere substituir o medicamento.</string>
 </resources>
