--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -261,4 +261,16 @@
     <string name="production_date">生产日期</string>
     <string name="expiration_date">到期日期</string>
     <string name="expiration_reminder">到期提醒</string>
+    <string name="daily_below_threshold">低于阈值时每日提醒</string>
+    <string name="remind_days_before_expiration">在到期前几天提醒</string>
+    <string name="out_of_stock_reminder_help">在药物缺货时提醒，可以在每次提醒后提醒，也可以只提醒一次，或每天提醒一次。</string>
+    <string name="expiration_date_reminder_help">在达到药物有效期或在有效期前的可配置时间提醒。</string>
+    <string name="once">一次</string>
+    <string name="daily">每日</string>
+    <string name="medicine_stock_settings">药品库存设置</string>
+    <string name="edit_medicine_stock_settings">编辑药品库存设置</string>
+    <string name="clear_dates">清除日期</string>
+    <string name="acknowledged">已确认</string>
+    <string name="refill_amount">补充 (%s)</string>
+    <string name="expiration_date_notification">药品 %1$s 的有效期为 %2$s。\n请考虑更换药品。</string>
 </resources>
