--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -291,4 +291,5 @@
     <string name="acknowledged">تم الإقرار</string>
     <string name="refill_amount">إعادة التعبئة (%s)</string>
     <string name="expiration_date_notification">الدواء %1$s له تاريخ انتهاء صلاحية في %2$s.\nفكر في استبدال الدواء.</string>
+    <string name="select_all">تحديد الكل</string>
 </resources>
