--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -271,4 +271,5 @@
     <string name="acknowledged">Kuitattu</string>
     <string name="refill_amount">Täyttö (%s)</string>
     <string name="expiration_date_notification">Lääkkeen %1$s viimeinen käyttöpäivä on %2$s.\nHarkitse lääkkeen vaihtamista.</string>
+    <string name="select_all">Valitse kaikki</string>
 </resources>
