--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -276,4 +276,5 @@
     <string name="acknowledged">Confirmé</string>
     <string name="refill_amount">Recharge (%s)</string>
     <string name="expiration_date_notification">Le médicament %1$s a une date d\'expiration au %2$s.\nPensez à remplacer le médicament.</string>
+    <string name="select_all">Tout sélectionner</string>
 </resources>
