--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -278,4 +278,5 @@
     <string name="acknowledged">Подтверждено</string>
     <string name="refill_amount">Пополнить (%s)</string>
     <string name="expiration_date_notification">Срок годности лекарства %1$s истекает %2$s.\nРассмотрите возможность замены лекарства.</string>
+    <string name="select_all">Выбрать все</string>
 </resources>
