--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -266,4 +266,5 @@
     <string name="acknowledged">已确认</string>
     <string name="refill_amount">补充 (%s)</string>
     <string name="expiration_date_notification">药品 %1$s 的有效期为 %2$s。\n请考虑更换药品。</string>
+    <string name="select_all">全选</string>
 </resources>
