--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -266,4 +266,5 @@
     <string name="acknowledged">已確認</string>
     <string name="refill_amount">補充 (%s)</string>
     <string name="expiration_date_notification">藥品 %1$s 的有效期為 %2$s。\n請考慮更換藥品。</string>
+    <string name="select_all">全選</string>
 </resources>
