--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -270,6 +270,6 @@
     <string name="clear_dates">Datumswerte löschen</string>
     <string name="acknowledged">Bestätigt</string>
     <string name="refill_amount">Nachfüllen (%s)</string>
-    <string name="expiration_date_notification">Das Medikament %1$s hat ein Verfallsdatum von %2$s.\nErwägen Sie, das Medikament zu ersetzen.</string>
+    <string name="expiration_date_notification">Das Medikament %1$s verfällt am %2$s.\nErwägen Sie, das Medikament zu ersetzen.</string>
     <string name="select_all">Alle auswählen</string>
 </resources>
