--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -272,4 +272,7 @@
     <string name="refill_amount">Bijvullen (%s)</string>
     <string name="expiration_date_notification">Het medicijn %1$s heeft een vervaldatum van %2$s.\nOverweeg het medicijn te vervangen.</string>
     <string name="select_all">Alles selecteren</string>
+    <string name="by_name">Op naam</string>
+    <string name="by_creation_date_ascending">Oplopend op aanmaakdatum</string>
+    <string name="by_creation_date_descending">Aflopend op aanmaakdatum</string>
 </resources>
