--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -282,4 +282,7 @@
     <string name="refill_amount">Doplnit (%s)</string>
     <string name="expiration_date_notification">Lék %1$s má datum expirace %2$s.\nZvažte výměnu léku.</string>
     <string name="select_all">Vybrat vše</string>
+    <string name="by_name">Podle jména</string>
+    <string name="by_creation_date_ascending">Vzestupně podle data vytvoření</string>
+    <string name="by_creation_date_descending">Sestupně podle data vytvoření</string>
 </resources>
