--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -277,4 +277,7 @@
     <string name="refill_amount">מילוי (%s)</string>
     <string name="expiration_date_notification">לתרופה %1$s יש תאריך תפוגה של %2$s.\nשקול להחליף את התרופה.</string>
     <string name="select_all">בחר הכל</string>
+    <string name="by_name">לפי שם</string>
+    <string name="by_creation_date_ascending">עולה לפי תאריך יצירה</string>
+    <string name="by_creation_date_descending">יורד לפי תאריך יצירה</string>
 </resources>
