--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -277,4 +277,7 @@
     <string name="refill_amount">Recarga (%s)</string>
     <string name="expiration_date_notification">O medicamento %1$s tem data de validade de %2$s.\nConsidere substituir o medicamento.</string>
     <string name="select_all">Selecionar tudo</string>
+    <string name="by_name">Por nome</string>
+    <string name="by_creation_date_ascending">Ascendente por data de criação</string>
+    <string name="by_creation_date_descending">Descendente por data de criação</string>
 </resources>
