--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -272,4 +272,7 @@
     <string name="refill_amount">மீள்நிரப்பு (%s)</string>
     <string name="expiration_date_notification">மருந்து %1$s-க்கு காலாவதி தேதி %2$s உள்ளது.\nமருந்தை மாற்றுவதைக் கவனியுங்கள்.</string>
     <string name="select_all">அனைத்தையும் தேர்ந்தெடு</string>
+    <string name="by_name">பெயர் மூலம்</string>
+    <string name="by_creation_date_ascending">உருவாக்கிய தேதி மூலம் ஏறுவரிசை</string>
+    <string name="by_creation_date_descending">உருவாக்கிய தேதி மூலம் இறங்குவரிசை</string>
 </resources>
