--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -282,4 +282,7 @@
     <string name="refill_amount">Поповнити (%s)</string>
     <string name="expiration_date_notification">Термін придатності ліків %1$s закінчується %2$s.\nРозгляньте можливість заміни ліків.</string>
     <string name="select_all">Вибрати все</string>
+    <string name="by_name">За назвою</string>
+    <string name="by_creation_date_ascending">За зростанням дати створення</string>
+    <string name="by_creation_date_descending">За спаданням дати створення</string>
 </resources>
